New lens files by TRONX2100 (Henry)
New lens files by TRONX2100 (Henry)

--- a/drivers/misc/mediatek/lens/common/ak7345af/Makefile
+++ b/drivers/misc/mediatek/lens/common/ak7345af/Makefile
@@ -1,8 +1,7 @@
 #
 # Makefile for misc devices that really don't fit anywhere else.
 #
-include $(srctree)/drivers/misc/mediatek/Makefile.custom
 
-obj-y += ak7345af.o
+obj-y += AK7345AF.o
 
 
