--- a/drivers/misc/mediatek/lens/Makefile
+++ b/drivers/misc/mediatek/lens/Makefile
@@ -1,116 +1,64 @@
 #
+# Copyright (C) 2015 MediaTek Inc.
+#
+# This program is free software: you can redistribute it and/or modify
+# it under the terms of the GNU General Public License version 2 as
+# published by the Free Software Foundation.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+# GNU General Public License for more details.
+#
+
+#
 # Makefile for misc devices that really don't fit anywhere else.
 #
-include $(srctree)/drivers/misc/mediatek/Makefile.custom
 
-#obj-y += sensordriver/sensordrive_lens.o
+MTK_PLATFORM := $(subst ",,$(CONFIG_MTK_PLATFORM))
+ARCH_MTK_PROJECT := $(subst ",,$(CONFIG_ARCH_MTK_PROJECT))
 
- 
-ifeq ($(CONFIG_ARCH_MT8127),y)
-		obj-$(CONFIG_MTK_LENS_FM50AF_SUPPORT)      += mt8127/fm50af/
+MTK_CUSTOM_PATH  := $(srctree)/drivers/misc/mediatek
+
+ifneq ($(CONFIG_ARM64), y)
+# For arm32, mach folder
+MTK_PLATFORM_PATH_ROOT := $(srctree)/arch/arm/mach-$(MTK_PLATFORM)
+MTK_PROJECT_PATH_ROOT := $(srctree)/arch/arm/mach-$(MTK_PLATFORM)/$(ARCH_MTK_PROJECT)
+  ifneq ($(filter y,$(CONFIG_ARCH_MT6752) $(CONFIG_ARCH_MT6732) $(CONFIG_ARCH_MT6595) $(CONFIG_ARCH_MT6795) $(CONFIG_ARCH_MT6735) $(CONFIG_ARCH_MT6735M) $(CONFIG_ARCH_MT6753) $(CONFIG_ARCH_MT6580)),)
+    # For armv8 32bit
+    MTK_PLATFORM_PATH_ROOT := $(srctree)/drivers/misc/mediatek/mach/$(MTK_PLATFORM)
+    MTK_PROJECT_PATH_ROOT := $(srctree)/drivers/misc/mediatek/mach/$(MTK_PLATFORM)/$(ARCH_MTK_PROJECT)
+  endif
 else
-	ifeq ($(CONFIG_ARCH_MT6580),y)
-	obj-$(CONFIG_MTK_LENS_DW9814AF_SUPPORT)      += mt6580/dw9814af/
-	obj-$(CONFIG_MTK_LENS_DW9714AF_SUPPORT)      += mt6580/dw9714af/
-	else
-		ifeq ($(CONFIG_ARCH_MT6592),y)
-		obj-$(CONFIG_MTK_LENS_DUMMYLENS_SUPPORT) +=  mt6592/dummy_lens/
-		obj-$(CONFIG_MTK_LENS_FM50AF_SUPPORT)    +=  mt6592/fm50af/
-		obj-$(CONFIG_MTK_LENS_GAF001AF_SUPPORT)  +=  mt6592/gaf001af/
-		obj-$(CONFIG_MTK_LENS_GAF002AF_SUPPORT)  +=  mt6592/gaf002af/
-		obj-$(CONFIG_MTK_LENS_GAF008AF_SUPPORT)  +=  mt6592/gaf008af/
-		obj-$(CONFIG_MTK_LENS_DW9714AF_SUPPORT)  +=  mt6592/dw9714af/
-		obj-$(CONFIG_MTK_LENS_DW9714A_SUPPORT)   +=  mt6592/dw9714a/
-		obj-$(CONFIG_MTK_LENS_DW9718AF_SUPPORT)  +=  mt6592/dw9718af/
-		obj-$(CONFIG_MTK_LENS_AK7345AF_SUPPORT)  +=  mt6592/ak7345af/
-		obj-$(CONFIG_MTK_LENS_SENSORDRIVE_SUPPORT) += mt6592/sensordrive/
-		else 
-			ifeq ($(CONFIG_ARCH_MT6582),y)
-			obj-$(CONFIG_MTK_LENS_DUMMYLENS_SUPPORT) +=  mt6582/dummy_lens/
-			obj-$(CONFIG_MTK_LENS_FM50AF_SUPPORT)    +=  mt6582/fm50af/
-			obj-$(CONFIG_MTK_LENS_GAF001AF_SUPPORT)  +=  mt6582/gaf001af/
-			obj-$(CONFIG_MTK_LENS_GAF002AF_SUPPORT)  +=  mt6582/gaf002af/
-			obj-$(CONFIG_MTK_LENS_GAF008AF_SUPPORT)  +=  mt6582/gaf008af/
-			obj-$(CONFIG_MTK_LENS_DW9714AF_SUPPORT)  +=  mt6582/dw9714af/
-			obj-$(CONFIG_MTK_LENS_DW9714A_SUPPORT)   +=  mt6582/dw9714a/
-			obj-$(CONFIG_MTK_LENS_DW9718AF_SUPPORT)  +=  mt6582/dw9718af/
-			else 
-				ifeq ($(CONFIG_ARCH_MT6752),y)
-				obj-$(CONFIG_MTK_LENS_DUMMYLENS_SUPPORT) += mt6752/dummy_lens/
-				obj-$(CONFIG_MTK_LENS_AD5820AF_SUPPORT) += mt6752/ad5820af/
-				obj-$(CONFIG_MTK_LENS_AD5823AF_SUPPORT) += mt6752/ad5823/
-				obj-$(CONFIG_MTK_LENS_AD5823AF_SUPPORT) += mt6752/ad5823af/
-				obj-$(CONFIG_MTK_LENS_BU6424AF_SUPPORT) += mt6752/bu6424af/
-				obj-$(CONFIG_MTK_LENS_BU6429AF_SUPPORT) += mt6752/bu6429af/
-				obj-$(CONFIG_MTK_LENS_BU64745GWZAF_SUPPORT) += mt6752/bu64745gwzaf/
-				obj-$(CONFIG_MTK_LENS_DW9714AF_SUPPORT) += mt6752/dw9714af/
-				obj-$(CONFIG_MTK_LENS_DW9718AF_SUPPORT) += mt6752/dw9718af/
-				obj-$(CONFIG_MTK_LENS_FM50AF_SUPPORT) += mt6752/fm50af/
-				obj-$(CONFIG_MTK_LENS_MT9P017AF_SUPPORT) += mt6752/mt9p017af/
-				obj-$(CONFIG_MTK_LENS_OV8825AF_SUPPORT) += mt6752/ov8825af/
-				obj-$(CONFIG_MTK_LENS_SENSORDRIVE_SUPPORT) += mt6752/sensordrive/
-				obj-$(CONFIG_MTK_LENS_LC898122AF_SUPPORT) += mt6752/lc898122af/
-				obj-$(CONFIG_MTK_LENS_LC898212AF_SUPPORT) += mt6752/lc898212af/
-				else
-					ifneq (,$(filter y,$(CONFIG_ARCH_MT6735) $(CONFIG_ARCH_MT6735M) $(CONFIG_ARCH_MT6753)))
-					obj-$(CONFIG_MTK_LENS_DUMMYLENS_SUPPORT)   += mt6735/dummy_lens/
-					obj-$(CONFIG_MTK_LENS_AD5820AF_SUPPORT)    += mt6735/ad5820af/
-					obj-$(CONFIG_MTK_LENS_AD5823AF_SUPPORT)    += mt6735/ad5823/
-					obj-$(CONFIG_MTK_LENS_AD5823AF_SUPPORT)    += mt6735/ad5823af/
-					obj-$(CONFIG_MTK_LENS_BU6424AF_SUPPORT)    += mt6735/bu6424af/
-					obj-$(CONFIG_MTK_LENS_BU6429AF_SUPPORT)    += mt6735/bu6429af/
-					obj-$(CONFIG_MTK_LENS_BU64745GWZAF_SUPPORT)+= mt6735/bu64745gwzaf/
-					obj-$(CONFIG_MTK_LENS_DW9714AF_SUPPORT)    += mt6735/dw9714af/
-					obj-$(CONFIG_MTK_LENS_DW9718AF_SUPPORT)    += mt6735/dw9718af/
-					obj-$(CONFIG_MTK_LENS_FM50AF_SUPPORT)      += mt6735/fm50af/
-					obj-$(CONFIG_MTK_LENS_MT9P017AF_SUPPORT)   += mt6735/mt9p017af/
-					obj-$(CONFIG_MTK_LENS_OV8825AF_SUPPORT)    += mt6735/ov8825af/
-					obj-$(CONFIG_MTK_LENS_SENSORDRIVE_SUPPORT) += mt6735/sensordrive/
-					obj-$(CONFIG_MTK_LENS_LC898122AF_SUPPORT)  += mt6735/lc898122af/
-					obj-$(CONFIG_MTK_LENS_LC898212AF_SUPPORT)  += mt6735/lc898212af/
-					obj-$(CONFIG_MTK_LENS_AK7345AF_SUPPORT)    += mt6735/ak7345af/
-					else
-						ifeq ($(CONFIG_ARCH_MT6795),y)
-						obj-$(CONFIG_MTK_LENS_DUMMYLENS_SUPPORT)   += mt6795/dummy_lens/
-						obj-$(CONFIG_MTK_LENS_AD5820AF_SUPPORT)    += mt6795/ad5820af/
-						obj-$(CONFIG_MTK_LENS_AD5823AF_SUPPORT)    += mt6795/ad5823/
-						obj-$(CONFIG_MTK_LENS_AD5823AF_SUPPORT)    += mt6795/ad5823af/
-						obj-$(CONFIG_MTK_LENS_BU6424AF_SUPPORT)    += mt6795/bu6424af/
-						obj-$(CONFIG_MTK_LENS_BU6429AF_SUPPORT)    += mt6795/bu6429af/
-						obj-$(CONFIG_MTK_LENS_BU64745GWZAF_SUPPORT)+= mt6795/bu64745gwzaf/
-						obj-$(CONFIG_MTK_LENS_DW9714AF_SUPPORT)    += mt6795/dw9714af/
-						obj-$(CONFIG_MTK_LENS_DW9718AF_SUPPORT)    += mt6795/dw9718af/
-						obj-$(CONFIG_MTK_LENS_FM50AF_SUPPORT)      += mt6795/fm50af/
-						obj-$(CONFIG_MTK_LENS_MT9P017AF_SUPPORT)   += mt6795/mt9p017af/
-						obj-$(CONFIG_MTK_LENS_OV8825AF_SUPPORT)    += mt6795/ov8825af/
-						obj-$(CONFIG_MTK_LENS_SENSORDRIVE_SUPPORT) += mt6795/sensordrive/
-						obj-$(CONFIG_MTK_LENS_LC898122AF_SUPPORT) += mt6795/lc898122af/
-						obj-$(CONFIG_MTK_LENS_LC898212AF_SUPPORT)    += mt6795/lc898212af/
-						obj-$(CONFIG_MTK_LENS_AK7345AF_SUPPORT)    += mt6795/ak7345af/
-						else
-						obj-$(CONFIG_MTK_LENS_DUMMYLENS_SUPPORT)   += common/dummy_lens/
-						obj-$(CONFIG_MTK_LENS_AD5820AF_SUPPORT)    += common/ad5820af/
-						obj-$(CONFIG_MTK_LENS_AD5823AF_SUPPORT)    += common/ad5823/
-						obj-$(CONFIG_MTK_LENS_AD5823AF_SUPPORT)    += common/ad5823af/
-						obj-$(CONFIG_MTK_LENS_BU6424AF_SUPPORT)    += common/bu6424af/
-						obj-$(CONFIG_MTK_LENS_BU6429AF_SUPPORT)    += common/bu6429af/
-						obj-$(CONFIG_MTK_LENS_BU64745GWZAF_SUPPORT)+= common/bu64745gwzaf/
-						obj-$(CONFIG_MTK_LENS_DW9714AF_SUPPORT)    += common/dw9714af/
-						obj-$(CONFIG_MTK_LENS_DW9718AF_SUPPORT)    += common/dw9718af/
-						obj-$(CONFIG_MTK_LENS_FM50AF_SUPPORT)      += common/fm50af/
-						obj-$(CONFIG_MTK_LENS_MT9P017AF_SUPPORT)   += common/mt9p017af/
-						obj-$(CONFIG_MTK_LENS_OV8825AF_SUPPORT)    += common/ov8825af/
-						obj-$(CONFIG_MTK_LENS_SENSORDRIVE_SUPPORT) += common/sensordrive/
-						obj-$(CONFIG_MTK_LENS_LC898122AF_SUPPORT) += common/lc898122af/
-						obj-$(CONFIG_MTK_LENS_LC898212AF_SUPPORT)    += common/lc898212af/
-						obj-$(CONFIG_MTK_LENS_AK7345AF_SUPPORT)    += common/ak7345af/	                			
-						endif
-					endif
-				endif
-			endif
-		endif
-	endif
+# For arm64, no mach-xxx folder
+MTK_PLATFORM_PATH_ROOT := $(srctree)/drivers/misc/mediatek/mach/$(MTK_PLATFORM)
+MTK_PROJECT_PATH_ROOT := $(srctree)/drivers/misc/mediatek/mach/$(MTK_PLATFORM)/$(ARCH_MTK_PROJECT)
 endif
 
 
 
+subdir-ccflags-y += -I$(MTK_CUSTOM_PATH)/lens/inc
+subdir-ccflags-$(CONFIG_MTK_LENS_LC898122AF_SUPPORT) += -I$(MTK_CUSTOM_PATH)/lens/common/lc898122af
+subdir-ccflags-$(CONFIG_MTK_LENS_LC898212XDAF_SUPPORT) += -I$(MTK_CUSTOM_PATH)/lens/common/lc898212xdaf/inc
+subdir-ccflags-$(CONFIG_MTK_LENS_LC898212XDAF_SUPPORT) += -I$(MTK_CUSTOM_PATH)/lens/common/lc898212xdaf_f/inc
+subdir-ccflags-$(CONFIG_MTK_LENS_BU63165AF_SUPPORT) += -I$(MTK_CUSTOM_PATH)/lens/common/bu63165af/inc
+
+obj-y      += DW9714AF.o
+#obj-y      += sub_lens.o
+obj-$(CONFIG_MTK_LENS_FM50AF_SUPPORT)      += common/fm50af/
+obj-$(CONFIG_MTK_LENS_BU6424AF_SUPPORT)    += common/bu6424af/
+obj-$(CONFIG_MTK_LENS_BU6429AF_SUPPORT)    += common/bu6429af/
+obj-$(CONFIG_MTK_LENS_BU63165AF_SUPPORT)  += common/bu63165af/
+obj-$(CONFIG_MTK_LENS_DW9714AF_SUPPORT)    += common/dw9714afx/
+obj-$(CONFIG_MTK_LENS_DW9800AF_SUPPORT)    += common/dw9800af/
+obj-$(CONFIG_MTK_LENS_DW9814AF_SUPPORT)    += common/dw9814af/
+obj-$(CONFIG_MTK_LENS_DW9810AF_SUPPORT)    += common/dw9810af/
+obj-$(CONFIG_MTK_LENS_DW9718AF_SUPPORT)    += common/dw9718af/
+obj-$(CONFIG_MTK_LENS_LC898212AF_SUPPORT)  += common/lc898212af/
+obj-$(CONFIG_MTK_LENS_LC898212XDAF_SUPPORT)  += common/lc898212xdaf/
+obj-$(CONFIG_MTK_LENS_LC898212XDAF_F_SUPPORT)  += common/lc898212xdaf_f/
+obj-$(CONFIG_MTK_LENS_LC898214AF_SUPPORT)  += common/lc898214af/
+obj-$(CONFIG_MTK_LENS_LC898122AF_SUPPORT)  += common/lc898122af/
+obj-$(CONFIG_MTK_LENS_AD5820AF_SUPPORT)    += common/ad5820af/
+obj-$(CONFIG_MTK_LENS_WV511AAF_SUPPORT)    += common/wv511aaf/
+obj-$(CONFIG_MTK_LENS_AK7371AF_SUPPORT)    += common/ak7371af/
