UID_CPUTIME + FM_Radio by TRONX2100 (Henry)
UID_CPUTIME + FM_Radio by TRONX2100 (Henry)

--- a/arch/arm64/configs/hnr_amoi_l861_defconfig
+++ b/arch/arm64/configs/hnr_amoi_l861_defconfig
@@ -892,6 +892,7 @@ CONFIG_UID_STAT=y
 # CONFIG_USB_SWITCH_FSA9480 is not set
 # CONFIG_LATTICE_ECP3_CONFIG is not set
 # CONFIG_SRAM is not set
+CONFIG_UID_CPUTIME=y
 # CONFIG_C2PORT is not set
 
 #
@@ -1328,27 +1329,6 @@ CONFIG_MTK_VIDEO_HEVC_SUPPORT=y
 CONFIG_NAND_OTP_SUPPORT=y
 # CONFIG_MTK_OD_SUPPORT is not set
 # CONFIG_MTK_DISPLAY_120HZ_SUPPORT is not set
-# CONFIG_MTK_LENS_DUMMYLENS_SUPPORT is not set
-# CONFIG_MTK_LENS_AD5820AF_SUPPORT is not set
-# CONFIG_MTK_LENS_AD5823_SUPPORT is not set
-# CONFIG_MTK_LENS_AD5823AF_SUPPORT is not set
-# CONFIG_MTK_LENS_AK7345AF_SUPPORT is not set
-# CONFIG_MTK_LENS_BU6424AF_SUPPORT is not set
-# CONFIG_MTK_LENS_BU6429AF_SUPPORT is not set
-# CONFIG_MTK_LENS_BU64745GWZAF_SUPPORT is not set
-# CONFIG_MTK_LENS_DW9718AF_SUPPORT is not set
-# CONFIG_MTK_LENS_DW9714AF_SUPPORT is not set
-# CONFIG_MTK_LENS_DW9714A_SUPPORT is not set
-# CONFIG_MTK_LENS_DW9814AF_SUPPORT is not set
-# CONFIG_MTK_LENS_LC898122AF_SUPPORT is not set
-# CONFIG_MTK_LENS_LC898212AF_SUPPORT is not set
-# CONFIG_MTK_LENS_FM50AF_SUPPORT is not set
-# CONFIG_MTK_LENS_MT9P017AF_SUPPORT is not set
-# CONFIG_MTK_LENS_OV8825AF_SUPPORT is not set
-# CONFIG_MTK_LENS_SENSORDRIVE_SUPPORT is not set
-# CONFIG_MTK_LENS_GAF001AF_SUPPORT is not set
-# CONFIG_MTK_LENS_GAF002AF_SUPPORT is not set
-# CONFIG_MTK_LENS_GAF008AF_SUPPORT is not set
 # CONFIG_MTK_INHOUSE_GPU is not set
 # CONFIG_SW_SYNC64 is not set
 CONFIG_HALL_SENSOR=y
@@ -1361,13 +1341,34 @@ CONFIG_MTK_VIDEOX=y
 CONFIG_MTK_MT_LOGGER=y
 CONFIG_MTK_CONN_MD=y
 CONFIG_MTK_LENS=y
+# CONFIG_MTK_LENS_DUMMYLENS_SUPPORT is not set
 # CONFIG_MTK_LENS_BU63165AF_SUPPORT is not set
+# CONFIG_MTK_LENS_AD5820AF_SUPPORT is not set
+# CONFIG_MTK_LENS_AD5823_SUPPORT is not set
+# CONFIG_MTK_LENS_AD5823AF_SUPPORT is not set
+# CONFIG_MTK_LENS_AK7345AF_SUPPORT is not set
 # CONFIG_MTK_LENS_AK7371AF_SUPPORT is not set
+# CONFIG_MTK_LENS_BU6424AF_SUPPORT is not set
+# CONFIG_MTK_LENS_BU6429AF_SUPPORT is not set
+# CONFIG_MTK_LENS_BU64745GWZAF_SUPPORT is not set
+# CONFIG_MTK_LENS_DW9718AF_SUPPORT is not set
+# CONFIG_MTK_LENS_DW9714AF_SUPPORT is not set
+# CONFIG_MTK_LENS_DW9714A_SUPPORT is not set
 CONFIG_MTK_LENS_DW9800AF_SUPPORT=y
+# CONFIG_MTK_LENS_DW9814AF_SUPPORT is not set
 # CONFIG_MTK_LENS_DW9810AF_SUPPORT is not set
+# CONFIG_MTK_LENS_LC898122AF_SUPPORT is not set
+# CONFIG_MTK_LENS_LC898212AF_SUPPORT is not set
 # CONFIG_MTK_LENS_LC898212XDAF_SUPPORT is not set
 # CONFIG_MTK_LENS_LC898212XDAF_F_SUPPORT is not set
 # CONFIG_MTK_LENS_LC898214AF_SUPPORT is not set
+# CONFIG_MTK_LENS_FM50AF_SUPPORT is not set
+# CONFIG_MTK_LENS_MT9P017AF_SUPPORT is not set
+# CONFIG_MTK_LENS_OV8825AF_SUPPORT is not set
+# CONFIG_MTK_LENS_SENSORDRIVE_SUPPORT is not set
+# CONFIG_MTK_LENS_GAF001AF_SUPPORT is not set
+# CONFIG_MTK_LENS_GAF002AF_SUPPORT is not set
+# CONFIG_MTK_LENS_GAF008AF_SUPPORT is not set
 # CONFIG_MTK_LENS_WV511AAF_SUPPORT is not set
 CONFIG_MTK_IMGSENSOR=y
 CONFIG_MTK_CAM_CAL=y
