--- a/arch/arm64/configs/hnr_51_amoi_l861_defconfig
+++ b/arch/arm64/configs/hnr_51_amoi_l861_defconfig
@@ -1608,7 +1608,7 @@ CONFIG_TOUCHSCREEN_MTK=y
 # CONFIG_TOUCHSCREEN_S7020 is not set
 # CONFIG_TOUCHSCREEN_MTK_GT9XX_2 is not set
 CONFIG_MTK_GT9157_861=y
-# CONFIG_MTK_GT9157_861_APPSWITCH is not set
+CONFIG_MTK_GT9157_861_APPSWITCH=y
 # CONFIG_MTK_GT9XX is not set
 # CONFIG_GT9XX_2 is not set
 # CONFIG_MTK_GT911 is not set
